# FinancialTrendForecastingSystem

./: README.md  package-lock.json  pyproject.toml
data/: AAPL_SEC.csv  JNJ_SEC.csv  cleaned_AAPL_NEWS.csv  cleaned_JNJ_NEWS.csv
data/final_output_data/: aaplARIMApred.csv  aaplLSTMpred.csv  aaplTransformerpred.csv  jnjARIMApred.csv  jnjLSTMpred.csv  jnjTransformerpred.csv
data/input_data_splits/: aapl_X_dev.csv  aapl_X_test.csv  aapl_X_train.csv  aapl_y_dev.csv  aapl_y_test.csv  aapl_y_train.csv  jnj_X_dev.csv  jnj_X_test.csv  jnj_X_train.csv  jnj_y_dev.csv  jnj_y_test.csv  jnj_y_train.csv
data/not-in-use/: AAPL_FINANCIAL.csv  AAPL_FULL_FINANCIAL.csv  AAPL_NEWS.csv  JNJ_FINANCIAL.csv  JNJ_FULL_FINANCIAL.csv  JNJ_NEWS.csv
notebooks/featurePrep/: featurization.ipynb  textDuplicates.ipynb
notebooks/models/: aaplARIMA.ipynb  aaplLSTM.ipynb  aaplTransformer.ipynb  jnjARIMA.ipynb  jnjLSTM.ipynb  jnjTransformer.ipynb
notebooks/old (not used)/: bobbyDataScraping.ipynb  bobbyfinancialData.ipynb  pre-processing.ipynb
notebooks/sentimentAnalysisTests/: classificationSentAnalysis.ipynb  regressionSentAnalysis.ipynb
notebooks/textDataScraping/: bobbyNewsAPI.ipynb
notebooks/validation/: modelValidation.ipynb
