[tool.poetry]
name = "financialtrendforecastingproject"
version = "0.1.0"
description = "Group Project for CS549: Machine Learning with the goal of comprehensive financial trend forecasting"
authors = ["Bobby Tomlinson <btomlinson237@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
crashtest = "0.4.1"
distlib = "0.3.9"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.5.0"
msgpack = "1.1.0"
packaging = "24.1"
pexpect = "4.9.0"
pkginfo = "1.11.2"
platformdirs = "4.3.6"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pycparser = "2.22"
pyproject-hooks = "1.2.0"
rapidfuzz = "3.10.1"
requests = ">=2.12.4"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
urllib3 = "2.2.3"
virtualenv = "20.27.1"
xattr = "1.1.0"
yfinance = "^0.2.48"
bs4 = "^0.0.2"
datetime = "^5.5"
pandas = "^2.2.3"
sec-edgar-downloader = "^5.0.2"
beautifulsoup4 = ">=4.4.1"
lxml = ">=3.5.0"
edgartools = "^3.0.10"
newsdataapi = "^0.1.21"
requests-html = "^0.10.0"
lxml-html-clean = "^0.3.1"
awscrt = "^0.23.0"
feedparser = "^6.0.11"
pygooglenews = {git = "https://github.com/Alyetama/pygooglenews.git"}
textblob = "^0.18.0.post0"
vadersentiment = "^3.3.2"
scikit-learn = "^1.5.2"
transformers = "^4.46.2"
tensorflow = "^2.18.0"
tf-keras = "^2.18.0"
matplotlib = "^3.9.2"
torch = "^2.5.1"
statsmodels = "^0.14.4"
numpy = "^1.26.0"
pmdarima = "^2.0.4"
keras-tuner = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
